--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Naboo</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <title>TheGossipProject</title>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:300' type='text/css' />
+    <%= javascript_include_tag :application %>
+    <%= csrf_meta_tag %>
+    <%= stylesheet_link_tag    'application', media: 'all'%>
   </head>
 
   <body>
