--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,20 +1,20 @@
 <div class="main-content">
   <!-- Header -->
-  <section class="slice slice-xl bg-cover bg-size--cover" data-offset-top="#header-main" style="background-image: url(../../assets/img/backgrounds/img-16.jpg); background-position: center center;">
+  <section class="slice slice-xl bg-cover bg-size--cover" data-offset-top="#header-main" style="background-image: url(https://images.pexels.com/photos/1643456/pexels-photo-1643456.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260); background-position: center center;">
     <span class="mask bg-dark opacity-3"></span>
     <div class="container py-6">
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
-          <h2 class="h1 text-white">Home Accessories</h2>
+          <h2 class="h1 text-white">Nos plus beaux chatons</h2>
           <ol class="breadcrumb breadcrumb-links breadcrumb-dark px-0 justify-content-center">
             <li class="breadcrumb-item">
               <a href="#" class="">Home</a>
             </li>
             <li class="breadcrumb-item">
-              <a href="#" class="text-normal">Shop</a>
+              <a href="#" class="text-normal">Chatons</a>
             </li>
             <li class="breadcrumb-item">
-              <a href="#" class="text-normal">Home Accessories</a>
+              <a href="#" class="text-normal">Nos plus beaux chatons</a>
             </li>
           </ol>
           <p class="lead text-white mt-4">There is only that moment and the incredible certainty that everything under the sun has been written by one hand only.</p>
