--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,20 +5,9 @@
     <div class="container py-6">
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
-          <h2 class="h1 text-white">Nos plus beaux chatons</h2>
-          <ol class="breadcrumb breadcrumb-links breadcrumb-dark px-0 justify-content-center">
-            <li class="breadcrumb-item">
-              <a href="#" class="">Home</a>
-            </li>
-            <li class="breadcrumb-item">
-              <a href="#" class="text-normal">Chatons</a>
-            </li>
-            <li class="breadcrumb-item">
-              <a href="#" class="text-normal">Nos plus beaux chatons</a>
-            </li>
-          </ol>
-          <p class="lead text-white mt-4">There is only that moment and the incredible certainty that everything under the sun has been written by one hand only.</p>
-          <a href="#" class="btn btn-white rounded-pill mt-4 shadow hover-shadow-lg hover-translate-y-n3">Start shopping</a>
+          <h2 class="h1 text-white">Nos plus beaux chatons</h2><br>
+          <p class="lead text-white mt-4">La vie c’est comme tenter de mettre des chatons dans un panier. Quand on y met le dernier, le premier est déjà de l’autre côté. <br><em>Séparation de coeur - Joanna Trollope</em></p>
+          <a href="#" class="btn btn-white rounded-pill mt-4 shadow hover-shadow-lg hover-translate-y-n3">Slide down to start shopping</a>
         </div>
       </div>
     </div>
