--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,7 +7,7 @@
         <div class="col-lg-6 text-center">
           <h2 class="h1 text-white">Nos plus beaux chatons</h2><br>
           <p class="lead text-white mt-4">La vie c’est comme tenter de mettre des chatons dans un panier. Quand on y met le dernier, le premier est déjà de l’autre côté. <br><em>Séparation de coeur - Joanna Trollope</em></p>
-          <a href="#" class="btn btn-white rounded-pill mt-4 shadow hover-shadow-lg hover-translate-y-n3">Slide down to start shopping</a>
+          <a href="#" class="btn btn-white rounded-pill mt-4 shadow hover-shadow-lg hover-translate-y-n3">Scroll down pour découvrir nos plus belles espèces</a>
         </div>
       </div>
     </div>
@@ -73,47 +73,6 @@
               </div>
             </div>
           </form>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class="slice-sm bg-primary">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4 mb-4 mb-lg-0">
-          <div class="px-4 py-3 text-lg-center">
-            <h6 class="text-sm text-white text-uppercase ls-1">Free shipping in 48/72H</h6>
-            <p class="text-white opacity-7">
-              Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod
-            </p>
-          </div>
-        </div>
-        <div class="col-lg-4 mb-4 mb-lg-0">
-          <div class="px-4 py-3 text-lg-center">
-            <h6 class="text-sm text-white text-uppercase ls-1">Free returns</h6>
-            <p class="text-white opacity-7">
-              Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod
-            </p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="px-4 py-3 text-lg-center">
-            <h6 class="text-sm text-white text-uppercase ls-1">Secure payment</h6>
-            <ul class="list-inline mt-2">
-              <li class="list-inline-item">
-                <img alt="Image placeholder" src="../../assets/img/icons/cards/visa.png" width="30">
-              </li>
-              <li class="list-inline-item">
-                <img alt="Image placeholder" src="../../assets/img/icons/cards/mastercard.png" width="30">
-              </li>
-              <li class="list-inline-item">
-                <img alt="Image placeholder" src="../../assets/img/icons/cards/maestro.png" width="30">
-              </li>
-              <li class="list-inline-item">
-                <img alt="Image placeholder" src="../../assets/img/icons/cards/paypal.png" width="30">
-              </li>
-            </ul>
-          </div>
         </div>
       </div>
     </div>
