--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,19 +42,19 @@
         <div class="row align-items-md-center">
           <div class="col-md-4 mb-4 mb-md-0">
             <div class="d-flex align-items-center">
-              <p class="text-sm mb-0">© Purpose. 2019 <a href="https://webpixels.io" target="_blank">Webpixels</a>. All rights reserved.</p>
+              <p class="text-sm mb-0">© Cats for sale. 2019 <a href="https://www.thehackingproject.org/" target="_blank">THP</a>. All rights reserved.</p>
             </div>
           </div>
           <div class="col-sm-6 col-md-4 mb-4 mb-sm-0">
             <ul class="nav justify-content-center">
               <li class="nav-item">
-                <a class="nav-link" href="pages/utility/support.html">Support</a>
+                <a class="nav-link" href="pages/utility/support.html">SAV</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pages/utility/terms.html">Terms</a>
+                <a class="nav-link" href="pages/utility/terms.html">Conditions</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pages/utility/privacy.html">Privacy</a>
+                <a class="nav-link" href="pages/utility/privacy.html">Confidentialité</a>
               </li>
             </ul>
           </div>
