--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -52,7 +52,7 @@
                 <div class="col-sm-6 text-sm-right">
                   <!-- Add to cart -->
                   <% if user_signed_in? %>
-                    <%= link_to product_carts_path(@product.id), remote: true, method: "POST", id: "addToCartBtn" do %>
+                    <%= link_to carts_path(:product_id => @product.id), remote: true, method: "POST" do %>
                       <button type="button" class="btn btn-primary btn-icon"> Add to cart <i class='fas fa-shopping-bag'></i> </button>
                     <% end %>
                   <% else %>
