--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -53,7 +53,7 @@
                   <!-- Add to cart -->
                   <% if user_signed_in? %>
                     <%= link_to carts_path(:product_id => @product.id), remote: true, method: "POST" do %>
-                      <button type="button" class="btn btn-primary btn-icon"> Add to cart <i class='fas fa-shopping-bag'></i> </button>
+                      <button type="button" class="btn btn-primary btn-icon" id="addToCartBtn"> Add to cart <i class='fas fa-shopping-bag'></i> </button>
                     <% end %>
                   <% else %>
                     <%= link_to "Please log in to purchase", new_user_session_path, class: "class='btn btn-primary btn-icon'" %>
