--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link nav-link-icon" href="#">
+              <a class="nav-link nav-link-icon" href=@current_user.cart>
                 <i class="fas fa-shopping-cart"></i>
                 <span class="nav-link-inner--text d-lg-primary">Panier</span>
               </a>
