--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,11 +25,12 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link nav-link-icon" href=@current_user.cart>
+              <%= link_to  cart_path(current_user.cart), class:"nav-link nav-link-icon" do %>
                 <i class="fas fa-shopping-cart"></i>
                 <span class="nav-link-inner--text d-lg-primary">Panier
                   <%= if current_user.cart != nil then "(#{current_user.cart.products.count})" end %>
                 </span>
+              <% end %>
               </a>
             </li>
           </ul>
