--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,13 +25,21 @@
               </a>
             </li>
             <li class="nav-item">
-              <%= link_to  cart_path(current_user.cart), class:"nav-link nav-link-icon" do %>
-                <i class="fas fa-shopping-cart"></i>
-                <span class="nav-link-inner--text d-lg-primary">Panier
-                  <%= if current_user.cart != nil then "(#{current_user.cart.products.count})" end %>
-                </span>
+              <% if user_signed_in? %>
+                <%= link_to  cart_path(current_user.cart), class:"nav-link nav-link-icon" do %>
+                  <i class="fas fa-shopping-cart"></i>
+                  <span class="nav-link-inner--text d-lg-primary">Panier
+                    <%= if current_user.cart != nil then "(#{current_user.cart.products.count})" end %>
+                  </span>
+                <% end %>
+                <%= link_to destroy_user_session_path, method: "DELETE" do %>
+                  <button type="button" class="btn btn-danger btn-icon"> Sign Out </button>
+                <% end %>
+              <% else %>
+                <%= link_to new_user_session_path do %>
+                  <button type="button" class="btn btn-primary btn-icon"> Log In </button>
+                <% end %>
               <% end %>
-              </a>
             </li>
           </ul>
         </div>
