--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -81,7 +81,7 @@
                     </span>
                   </td>
                   <td>
-                    <input type="text" class="form-control form-control-sm text-center" style="width: 80px;" value="">
+                    <input name="<%= product.id %>_quantity" type="text" class="form-control form-control-sm text-center" style="width: 80px;" value=<%= current_user.cart.products.where(id: product.id).count %>>
                   </td>
                   <td class="total">
                     2
