--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -58,7 +58,7 @@
           </thead>
           <tbody class="list">
             <% @products.each do |product| %>
-              <% if current_user.cart.products.includes(product) %>
+              <% if current_user.cart.products.include?(product) %>
                 <tr>
                   <th scope="row">
                     <div class="media align-items-center">
@@ -119,7 +119,12 @@
                   <i class="fas fa-shopping-cart"></i>
                 </span>
               </button>
-              <a href="/products" class="btn btn-link text-sm text-dark font-weight-bold">Retour aux chatons</a>
+              <button type="button" class="btn btn-animated btn-light btn-animated-y">
+                <span class="btn-inner--visible">Mettre à jour mon panier</span>
+                <span class="btn-inner--hidden">
+                  <i class="fas fa-check"></i>
+                </span>
+              </button>
             </div>
           </div>
         </div>
