--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -119,7 +119,7 @@
                   <i class="fas fa-shopping-cart"></i>
                 </span>
               </button>
-              <% link_to cart_path(@cart), remote: true, method: "PATCH" do %>
+              <%= link_to cart_path(@cart), remote: true, method: "PATCH" do %>
                 <button type="button" class="btn btn-animated btn-light btn-animated-y">
                   <span class="btn-inner--visible">Mettre à jour mon panier</span>
                   <span class="btn-inner--hidden">
