--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,6 +3,15 @@
     <div class="container">
       <div class="row row-grid">
         <div class="col-lg-6">
+          <h1>Page Profil</h1>
+
+          <p>Bienvenue sur la page d'ajout d'un avatar pour le User portant l'id : <%=@product.id%></p>
+          <h3>Avatar actuel</h3>
+          <%if @product.avatar.attached?%>
+            <%= image_tag @product.avatar, alt: 'avatar' %>
+          <%else%>
+            <p>=== Il n'y a pas encore d'avatar lié à cet utilisateur ===</p>
+          <%end%>
           <div data-toggle="sticky" data-sticky-offset="30">
             <a href="../../assets/img/theme/light/shop-product-lg-2.jpg" data-fancybox>
               <img alt="Image placeholder" src="<%= @product.image_url %>" class="img-fluid">
