--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -35,3 +35,9 @@
     <%= form.submit %>
   </div>
 <% end %>
+
+<h3>Changer d'avatar ?</h3>
+<%= form_tag product_avatars_path(@product), multipart: true do %>
+  <%= file_field_tag :avatar %>
+  <%= submit_tag "mettre à jour" %>
+<% end %>
