--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,9 +28,7 @@
               <% if user_signed_in? %>
                 <%= link_to cart_path(current_user.cart), class:"nav-link nav-link-icon" do %>
                   <i class="fas fa-shopping-cart"></i>
-                  <span class="nav-link-inner--text d-lg-primary">Panier
-                    <%= if current_user.cart != nil then "(#{current_user.cart.products.count})" end %>
-                  </span>
+                  <span class="nav-link-inner--text d-lg-primary"> Panier (<%= current_user.cart.products.count %>) </span>
                 <% end %>
                 <%= link_to destroy_user_session_path, method: "DELETE" do %>
                   <button type="button" class="btn btn-danger btn-icon"> Sign Out </button>
