--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -81,7 +81,22 @@
                     </span>
                   </td>
                   <td>
-                    <input name="<%= product.id %>_quantity" type="text" class="form-control form-control-sm text-center" style="width: 80px;" value=<%= current_user.cart.products.where(id: product.id).count %>>
+                    <span class="badge badge-dot mr-3">
+                      <i class="bg-"></i>
+                      <span class="status"><%= current_user.cart.products.where(id: product.id).count %></span>
+                    </span>
+                    <div class="row">
+                      <div class="actions ml-3">
+                        <a href="#" class="action-item mr-2" data-toggle="tooltip" title="Delete one item">
+                          <i class="fas fa-minus"></i>
+                        </a>
+                      </div>
+                      <div class="actions ml-3">
+                        <a href="#" class="action-item mr-2" data-toggle="tooltip" title="Add one item">
+                          <i class="fas fa-plus"></i>
+                        </a>
+                      </div>
+                    </div>
                   </td>
                   <td class="total">
                     <%= current_user.cart.products.where(id: product.id).count * product.price %> €
