center choice number of items card

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -81,17 +81,17 @@
                     </span>
                   </td>
                   <td>
-                    <span class="badge badge-dot mr-3">
+                    <span class="badge badge-dot ml-3">
                       <i class="bg-"></i>
                       <span class="status"><%= current_user.cart.products.where(id: product.id).count %></span>
                     </span>
                     <div class="row">
-                      <div class="actions ml-3">
+                      <div class="actions ml-4">
                         <a href="#" class="action-item mr-2" data-toggle="tooltip" title="Delete one item">
                           <i class="fas fa-minus"></i>
                         </a>
                       </div>
-                      <div class="actions ml-3">
+                      <div class="actions ml-2">
                         <a href="#" class="action-item mr-2" data-toggle="tooltip" title="Add one item">
                           <i class="fas fa-plus"></i>
                         </a>
