--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -87,14 +87,14 @@
                     </span>
                     <div class="row">
                       <div class="actions ml-3">
-                        <a href="#" class="action-item mr-2" data-toggle="tooltip" title="Delete one item">
+                        <%= link_to cart_path(@cart, :product_id => product.id, :to_do => "remove"), method: "PATCH", remote: true, class:"action-item mr-2" do %>
                           <i class="fas fa-minus"></i>
-                        </a>
+                        <% end %>
                       </div>
                       <div class="actions ml-3">
-                        <a href="#" class="action-item mr-2" data-toggle="tooltip" title="Add one item">
+                        <%= link_to cart_path(@cart, :product_id => product.id, :to_do => "add"), method: "PATCH", remote: true, class:"action-item mr-2" do %>
                           <i class="fas fa-plus"></i>
-                        </a>
+                        <% end %>
                       </div>
                     </div>
                   </td>
