added btn remove prdct from cart

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -104,8 +104,9 @@
                   <td class="text-right">
                     <!-- Actions -->
                     <div class="actions ml-3">
-                      <a href="#" class="action-item mr-2" data-toggle="tooltip" title="Move to trash">
+                      <%= link_to cart_path(@cart, :product_id => product.id, :to_do => "delete"), method: "PATCH", remote: true, class:"action-item mr-2" do %>
                         <i class="fas fa-times"></i>
+                      <% end %>
                       </a>
                     </div>
                   </td>
@@ -134,14 +135,6 @@
                   <i class="fas fa-shopping-cart"></i>
                 </span>
               </button>
-              <%= link_to cart_path(@cart), remote: true, method: "PATCH" do %>
-                <button type="button" class="btn btn-animated btn-light btn-animated-y">
-                  <span class="btn-inner--visible">Mettre à jour mon panier</span>
-                  <span class="btn-inner--hidden">
-                    <i class="fas fa-check"></i>
-                  </span>
-                </button>
-              <% end %>
             </div>
           </div>
         </div>
