activation scroll button index products

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,14 +7,14 @@
         <div class="col-lg-6 text-center">
           <h2 class="h1 text-white">Nos plus beaux chatons</h2><br>
           <p class="lead text-white mt-4">La vie c’est comme tenter de mettre des chatons dans un panier. Quand on y met le dernier, le premier est déjà de l’autre côté. <br><em>Séparation de coeur - Joanna Trollope</em></p>
-          <a href="#" class="btn btn-white rounded-pill mt-4 shadow hover-shadow-lg hover-translate-y-n3">Scroll down pour découvrir nos plus belles espèces</a>
+          <a href="#section02" class="btn btn-white rounded-pill mt-4 shadow hover-shadow-lg hover-translate-y-n3">Scroll down pour découvrir nos plus belles espèces</a>
         </div>
       </div>
     </div>
   </section>
 
   <!-- Products -->
-  <section class="slice slice-lg delimiter-bottom" id="sct-products">
+  <section id="section02" class="slice slice-lg delimiter-bottom" id="sct-products">
     <div class="container">
       <div class="row">
         <% @products.each do |product| %>
