--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag charges_path do %>
+<%= form_tag cart_charges_path do %>
   <article>
     <% if flash[:error].present? %>
       <div id="error_explanation">
@@ -6,13 +6,13 @@
       </div>
     <% end %>
     <label class="amount">
-      <span>Amount: $5.00</span>
+      <span><%= @amount %> €</span>
     </label>
   </article>
 
   <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
           data-key="<%= Rails.configuration.stripe[:stripe_publishable_key] %>"
-          data-description="A month's subscription"
-          data-amount="500"
+          data-description="Pay"
+          data-amount="<%= @amount*100 %>"
           data-locale="auto"></script>
 <% end %>
