--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,3 +12,9 @@
   <strong>Encrypted password:</strong>
   <%= @user.encrypted_password %>
 </p>
+
+<p>
+  <strong>Is Admin:</strong>
+  <%= @user.is_admin %>
+</p>
+
