--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -6,7 +6,7 @@
       </div>
     <% end %>
     <label class="amount">
-      <span><%= @amount %> €</span>
+      <span><%= @amount.round(2) %> €</span>
     </label>
   </article>
 
