--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,6 +21,8 @@
                   <%= if current_user.cart != nil then "(#{current_user.cart.products.count})" end %>
                   </span>
               <% end %>
+              </li>
+              <li class="nav-item">
               <%= link_to destroy_user_session_path, method: "DELETE" do %>
                 <button type="button" class="btn btn-danger btn-icon"> Sign Out </button>
               <% end %>
