--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,183 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<!-- Header (account) -->
+<section class="header-account-page bg-primary d-flex align-items-end" data-offset-top="#header-main">
+  <!-- Header container -->
+  <div class="container pt-4 pt-lg-0">
+    <div class="row">
+      <div class=" col-lg-12">
+        <!-- Salute + Small stats -->
+        <div class="row align-items-center mb-4">
+          <div class="col-md-5 mb-4 mb-md-0">
+            <span class="h2 mb-0 text-white d-block">Morning, Heather</span>
+            <span class="text-white">Have a nice day!</span>
+          </div>
+          <div class="col-auto flex-fill d-none d-xl-block">
+            <ul class="list-inline row justify-content-lg-end mb-0">
+              <li class="list-inline-item col-sm-4 col-md-auto px-3 my-2 mx-0">
+                    <span class="badge badge-dot text-white">
+                      <i class="bg-success"></i>Ventes de chats
+                    </span>
+                <a class="d-sm-block h5 text-white font-weight-bold pl-2" href="#">
+                  57.8%
+                  <small class="fas fa-angle-up text-success"></small>
+                </a>
+              </li>
+              <li class="list-inline-item col-sm-4 col-md-auto px-3 my-2 mx-0">
+                    <span class="badge badge-dot text-white">
+                      <i class="bg-warning"></i>Reproduction
+                    </span>
+                <a class="d-sm-block h5 text-white font-weight-bold pl-2" href="#">
+                  13.36%
+                  <small class="fas fa-angle-up text-warning"></small>
+                </a>
+              </li>
+              <li class="list-inline-item col-sm-4 col-md-auto px-3 my-2 mx-0">
+                    <span class="badge badge-dot text-white">
+                      <i class="bg-danger"></i>Prix
+                    </span>
+                <a class="d-sm-block h5 text-white font-weight-bold pl-2" href="#">
+                  -9.24%
+                  <small class="fas fa-angle-down text-danger"></small>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- Account navigation -->
+        <div class="d-flex">
+          <a href="account-profile-public.html" class="btn btn-icon btn-group-nav shadow btn-neutral">
+            <span class="btn-inner--icon"><i class="fas fa-user"></i></span>
+            <span class="btn-inner--text d-none d-md-inline-block">Mon Profil</span>
+          </a>
+        </div>
+      </div>
+    </div>
   </div>
+</section>
+<section class="slice">
+  <div class="container">
+    <div class="row row-grid">
+      <div class="col-lg-9 order-lg-2">
+        <!-- Change avatar -->
+        <div class="card bg-gradient-warning hover-shadow-lg">
+          <div class="card-body py-3">
+            <div class="row row-grid align-items-center">
+              <div class="col-lg-8">
+                <div class="media align-items-center">
+                  <div class="media-body">
+                    <h5 class="text-white mb-0">Heather Wright</h5>
+                  </div>
+                </div>
+              </div>
+              <div class="col-auto flex-fill mt-4 mt-sm-0 text-sm-right d-none d-lg-block">
+                <a href="/products" class="btn btn-sm btn-white rounded-pill btn-icon shadow">
+                  <span class="btn-inner--icon"><i class="fas fa-fire"></i></span>
+                  <span class="btn-inner--text">Commencer mon shopping</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- General information form -->
+        <div class="actions-toolbar py-2 mb-4">
+          <h5 class="mb-1">Infos générales</h5>
+          <p class="text-sm text-muted mb-0">Pour commander un de nos petits chatons, n'oublie pas de compléter ton comptes avec toutes tes informations personnelles.</p>
+        </div>
+          <!-- EMAIL + PREVIOUS PASSWORD ROW -->
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+          <div class="row">
+            <div class="col-md-12">
+              <div class="form-group">
+                <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+                  <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
+                  <div class="field">
+                    <%= f.label :email, class: "form-control-label" %><br />
+                    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+                    <small class="form-text text-muted mt-2">Il s'agit de l'adresse à laquelle nous t'enverrons quelques nouvelles relatives à ton profil et à tes commandes de chatons. </small>
+                  </div>
+
+                  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+                    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+                  <% end %>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="form-group">
+                        <%= f.label :current_password, class: "form-control-label" %><br />
+                        <%= f.password_field :current_password, placeholder: "Ton ancien mot de passe...", class: "form-control" %>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="form-group">
+                        <%= f.label :password, class: "form-control-label" %><br />
+                        <%= f.password_field :password, placeholder: "Ton nouveau mot de passe..", class: "form-control" %>
+                        <% if @minimum_password_length %>
+                        <% end %>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="form-group">
+                        <%= f.label :password_confirmation, class: "form-control-label" %><br />
+                        <%= f.password_field :password_confirmation, placeholder: "Attention aux fautes..", class: "form-control" %>
+                      </div>
+                    </div>
+                  </div>
+                    <div class="mt-4">
+                      <div class="actions">
+                        <%= f.submit "Mettre à jour", class: "btn btn-sm btn-primary" %>
+                      </div>
+                     <% end %>
+                    </div>
+                </div>
+            </div>
+          </div>
+          <!-- Save changes buttons -->
+
+        <!-- Delete -->
+        <div class="mt-5 pt-5 delimiter-top">
+          <div class="actions-toolbar py-2 mb-4">
+            <h5 class="mb-1">Delete account</h5>
+            <p class="text-sm text-muted mb-0">Deleting your account is ireversible and can affect past activites.</p>
+          </div>
+        </div>
+        <!-- Button trigger modal -->
+        <p><%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-sm btn-danger" %></p>
+
+      </div>
+      <!-- FORM END -->
+
+      <!-- MODIFY PROFILE COLUMN -->
+      <div class="col-lg-3 order-lg-1">
+        <div data-toggle="sticky" data-sticky-offset="30" data-negative-margin=".card-profile-cover">
+          <div class="card">
+            <div class="card-header py-3">
+              <span class="h6">Modifier mon profil</span>
+            </div>
+            <div class="list-group list-group-sm list-group-flush">
+              <a href="account-profile.html" class="list-group-item list-group-item-action d-flex justify-content-between">
+                <div>
+                  <i class="fas fa-user-circle mr-2"></i>
+                  <span>Profil</span>
+                </div>
+                <div>
+                  <i class="fas fa-angle-right"></i>
+                </div>
+              </a>
+              <a href="account-settings.html" class="list-group-item list-group-item-action d-flex justify-content-between">
+                <div>
+                  <i class="fas fa-cog mr-2"></i>
+                  <span>Réglages</span>
+                </div>
+                <div>
+                  <i class="fas fa-angle-right"></i>
+                </div>
+              </a>
+            </div>
+
+          </div>
+        </div>
+      </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</section>
+</div>
