--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -10,28 +10,37 @@
       </ul>
     </div>
   <% end %>
-
+  <div class="col-md-6">
+    <div class="form-group">
   <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
+    <%= form.label :title, class: "form-control-label" %>
+    <%= form.text_field :title, class: "form-control" %>
+  </div>
+    </div>
   </div>
 
+  <div class="col-md-6">
+    <div class="form-group">
   <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description %>
+    <%= form.label :description, class: "form-control-label" %>
+    <%= form.text_area :description, class: "form-control" %>
+  </div>
+    </div>
   </div>
 
+  <div class="col-md-6">
+    <div class="form-group">
   <div class="field">
-    <%= form.label :price %>
-    <%= form.text_field :price %>
+    <%= form.label :price, class: "form-control-label" %>
+    <%= form.text_field :price, class: "form-control" %>
+  </div>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :image_url %>
-    <%= form.text_field :image_url %>
+  <div class="col-md-6">
+    <div class="actions">
+      <%= form.submit "Mettre à jour", class: "btn btn-sm btn-primary" %>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= form.submit %>
   </div>
 <% end %>
