--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title>TheGossipProject</title>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:300' type='text/css' />
+  <%= render 'layouts/addon' %>
   <%= javascript_include_tag :application %>
   <%= csrf_meta_tag %>
   <%= stylesheet_link_tag    'application', media: 'all'%>
