--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -33,7 +33,7 @@
                 <%= product.description %>
               </p>
               <span class="card-price"><%= product.price %> €</span><br>
-              <%= link_to 'Voir le chaton', product, class: "btn btn-outline-info btn-sm" %>
+              <%= link_to 'Miaou', product, class: "btn btn-soft-info btn-sm" %>
             </div>
             <div class="actions card-product-actions" data-animation-in="slideInLeft" data-animation-out="slideOutLeft">
               <button type="button" class="action-item" data-toggle="tooltip" data-original-title="Add to cart">
@@ -56,8 +56,8 @@
       <div class="row justify-content-center">
         <div class="col-lg-6 col-xl-6 text-center">
           <div class="mb-5">
-            <h1 class="text-white">Always on time</h1>
-            <p class="lead text-white mt-2">You get all Bootstrap components fully customized. Besides, you receive another numerous plugins out of the box and ready to use.</p>
+            <h1 class="text-white">Livraison dans la journée</h1>
+            <p class="lead text-white mt-1">Tous nos chats sont transportés dans les meilleures conditions possibles, et livrés avec un repas dans l'estomac, et une bouteille d'eau pour une meilleure hydratation.</p>
           </div>
           <form>
             <div class="form-group mb-0">
